--- a/setup.yml
+++ b/setup.yml
@@ -1,23 +1,50 @@
 ---
-- name: Setup Grafana
+- name: Get Files to Setup Sigma Network
   hosts: vm
   remote_user: ubuntu
 
   tasks:
-  - name: Get Grafana 9.3.1
-    shell: wget https://dl.grafana.com/oss/release/grafana_9.3.1_amd64.deb
+  - name: Create Downloads Directory
+    become: yes
+    file:
+      path: ~/Downloads
+      state: directory
+      mode: 0755
 
+  - name: Get Grafana 9.3.1
+    become: yes
+    get_url: 
+      url: https://dl.grafana.com/oss/release/grafana_9.3.1_amd64.deb
+      dest: ~/Downloads
+      mode: 0755
+
+  - name: Get Prometheus
+    become: yes
+    get_url:
+      url: https://github.com/prometheus/prometheus/releases/download/v2.40.6/prometheus-2.40.6.linux-amd64.tar.gz
+      dest: ~/Downloads
+      mode: 0755
+
+  - name: Get Node Exporter
+    become: yes
+    get_url:
+      url: wget https://github.com/prometheus/node_exporter/releases/download/v1.5.0/node_exporter-1.5.0.linux-amd64.tar.gz
+      dest: ~/Downloads
+      mode: 0755
+
+- name: Install Grafana
+  hosts: vm
+  remote_user: ubuntu
+
+  tasks:
   - name: Install Grafana 9.3.1
     shell: |
-        sudo dpkg -i grafana_9.3.1_amd64.deb
+        sudo dpkg -i ~/Downaloads/grafana_9.3.1_amd64.deb      
 
 - name: Setup Prometheus
   hosts: vm
   remote_user: ubuntu
 
   tasks:
-  - name: Get Prometheus 2.40.6
-    shell: wget https://github.com/prometheus/prometheus/releases/download/v2.40.6/prometheus-2.40.6.linux-amd64.tar.gz
-
   - name: Extract Prometheus tar.gz
-    shell: tar xvf prometheus-2.40.6.linux-amd64.tar.gz
+    shell: tar xvf ~/Downloads/prometheus-2.40.6.linux-amd64.tar.gz
